<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="function_not_open">功能建设中，敬请期待。。。</string>
    <string name="test">测试</string>
    <string name="login">登录</string>
    <string name="job_number">工号</string>
    <string name="password">密码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_tag_home">首页</string>
    <string name="tab_tag_dynamic">问答</string>
    <string name="tab_tag_group">圈子</string>
    <string name="tab_tag_school">学堂</string>
    <string name="tab_tag_team">团队</string>
    <string name="tab_tag_mine">我的</string>
    <string name="tab_tag_know">知道</string>
    <string name="tab_tag_msg">消息</string>
    <string name="sure">确定</string>
    <string-array name="tab_tag">
        <item>首页</item>
        <item>圈子</item>
        <item>问答</item>
        <item>团队</item>
        <item>我的</item>
    </string-array>
    <string name="search_warning">搜索您想知道的</string>
    <string name="search">搜索</string>
    <string name="home_answer">您来挑战</string>
    <string name="home_classiccase">典型案例</string>
    <string name="group_professor">专家解答</string>
    <string name="search_with_key">关键字搜索</string>
    <string name="my_question">我的提问</string>
    <string name="my_save">我的收藏</string>
    <string name="my_answer">我的回答</string>
    <string name="my_circle">我的圈子</string>
    <string name="my_practice">我的练习</string>
    <string name="my_experience">我的履历</string>
    <string name="my_train">我的培训</string>
    <string name="my_develop_grade">我的发展积分</string>
    <string name="my_honor">我的获奖及荣誉</string>
    <string name="my_setting">设置</string>
    <string name="my_service">客服电话</string>
    <string name="my_personinfo">个人资料</string>
    <string name="my_signinfo">签到</string>
    <string name="title_activity_my_question">MyQuestionActivity</string>
    <string name="title_activity_my_setting">MySettingActivity</string>
    <string name="title_activity_my_change_nick_name">MyChangeNickNameActivity</string>
    <string name="title_activity_my_circle">MyCircleActivity</string>
    <string name="team_circle_dynamic">团队动态</string>
    <string name="team_circle_discover">发现团队</string>
    <string name="type">类型</string>
    <string name="choose">筛选</string>
    <string name="follow_new">按最新</string>
    <string name="follow_hot">按最热</string>
    <string name="type_video">视频</string>
    <string name="type_all">全部</string>
    <string name="type_picture">图片</string>
    <string name="type_txt">文本</string>
    <string name="type_other">其他</string>
    <string name="introduction">简介</string>
    <string name="question_bank_practice">题库练习</string>
    <string name="loading">加载中…</string>
    <string name="no_more">没有更多</string>
    <string name="load_fail">加载失败</string>
    <string name="load_success">加载成功</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_success">刷新成功</string>
    <string name="xlistview_header_hint_failt">刷新失败</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="change_nickname">修改昵称</string>
    <string name="save">保存</string>
    <string name="commit">提交</string>
    <string name="setting_nickname">用户昵称</string>
    <string name="setting_user">用户名</string>
    <string name="setting_level">当前等级</string>
    <string name="setting_score">个人积分</string>
    <string name="setting_changepsw">修改密码</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_suggest">意见反馈</string>
    <string name="setting_about">关于知道</string>
    <string name="tips_attention">注意</string>
    <string name="new_client_version">发现新版本，是否现在更新？</string>
    <string name="sure_ask_newquestion">确定要提交该提问？</string>
    <string name="sure_pass">确定要采纳该条回答？</string>
    <string name="setting_logout">退出登录</string>
    <string name="title_activity_my_suggest">MySuggestActivity</string>
    <string name="function_no_open">功能暂未开放</string>
    <string name="school_url">http://dzd.nbuen.com/mobile/media_app.php</string>
    <string name="test_library">http://117.149.2.229:1624/ecm/ZUI/pages/ecm/selectQuestion.html</string>
    <string name="my_practice_url">ecm_dzd/ZUI/pages/dzd/practice.html</string>
    <string name="ask_question_hint">试着将问题尽可能清晰的描述出来，这样回答者们才能更完整、更高质量的为您解答。(最多1000个字)</string>
    <string-array name="cal_weekdays">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <string name="ask_question_tag_hint">请选择问题标签</string>
    <string name="ask_question_target_member">请选择指定回答人员</string>
    <string name="calendar_title">%1$d年%2$d月</string>
    <string name="last_month">上个月</string>
    <string name="next_month">下个月</string>
    <string name="cal_signed">已签</string>
    <string name="cal_today">今日</string>
    <string name="cal_unsign">未签</string>
    <string name="cal_unreach">签到</string>
    <string name="down_scan">扫一扫下载安装</string>
    <string name="about">关于电知道</string>
    <string name="about_operate">操作手册</string>
    <string name="network_disconnected_hint">当前网络不可用, 请检查你的网络设置</string>
    <string name="actionbar_msg">聊天</string>
    <string name="cross_app_key">跨应用</string>
    <string name="actionbar_conversation">会话</string>
    <string name="actionbar_contact">通讯录</string>
    <string name="actionbar_me">我</string>
    <string name="search_friend_hit">邮箱/用户名/ID</string>
    <string name="take_monent">稍等片刻</string>
    <string name="add">添加</string>
    <string name="add_friend">添加好友</string>
    <string name="add_friend_without_confirm">添加好友(无好友模式)</string>
    <string name="fetch_user_info_failed">用户信息获取失败</string>
    <string name="create_group">创建群聊</string>
    <string name="creating_hint">创建中</string>
    <string name="create_user">我们正在建立您的个人档案</string>
    <string name="search_friend_title_bar">搜索好友</string>
    <string name="friend_request_hit">请你输入你的添加好友请求</string>
    <string name="friend_request_input_hit">我是</string>
    <string name="send_request">发送请求</string>
    <string name="jmui_copy">复制</string>
    <string name="jmui_forward_msg">转发</string>
    <string name="jmui_copy_toast">已复制</string>
    <string name="jmui_delete">删除</string>
    <string name="jmui_delete_conv">删除该聊天</string>
    <string name="jmui_create_file_failed">创建文件失败</string>
    <string name="jmui_record_voice_hint">按住 说话</string>
    <string name="jmui_cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="jmui_send_voice_hint">松开 结束</string>
    <string name="jmui_move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="jmui_rest_record_time_hint">还可以说%s秒</string>
    <string name="combine_title">(%s)</string>
    <string name="jmui_file_not_found_toast">文件丢失, 尝试重新获取</string>
    <string name="not_select_photo">你没有选择照片，请重新选择</string>
    <string name="picture_not_found">没有找到您想要的图片</string>
    <string name="jmui_loading">正在加载</string>
    <string name="load_failed_toast">加载失败</string>
    <string name="info_null">未填写</string>
    <string name="change_avatar">修改头像</string>
    <string name="operation">操作</string>
    <string name="origin_picture">原图</string>
    <string name="jmui_send">发送</string>
    <string name="send_message">发消息</string>
    <string name="sending_hint">正在发送</string>
    <string name="jmui_resend_message_hint">重发该消息？</string>
    <string name="jmui_resend_commit">重发</string>
    <string name="jmui_cancel">取消</string>
    <string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>
    <string name="load_origin_image">查看原图</string>
    <string name="downloading_hint">正在下载</string>
    <string name="download_completed_toast">下载完成</string>
    <string name="choose_album_title">选择相册</string>
    <string name="friend_opt_change_name">修改备注</string>
    <string name="friend_opt_delete">删除好友</string>
    <string name="friend_opt_detail">详细资料</string>
    <string name="detail_info">个人资料</string>
    <string name="jmui_voice_length">10"</string>
    <string name="jmui_symbol_second">\"</string>
    <string name="jmui_time_too_short_toast">时间太短！</string>
    <string name="file_fetch_failed">文件获取失败</string>
    <string name="jmui_record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许，
        否则将无法使用录音功能</string>
    <string name="jmui_record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="jmui_voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="jmui_illegal_state_toast">录音状态异常,请稍后重试</string>
    <string name="draft">[草稿]</string>
    <string name="jmui_picture">图片</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="type_file">[文件]</string>
    <string name="send_location">发送地理位置</string>
    <string name="permission_should_allow">请允许使用位置权限，否则无法发送位置消息</string>
    <string name="send_location_error">位置截图失败或会话为空</string>
    <string name="jmui_video">视频</string>
    <string name="jmui_location">位置</string>
    <string name="jmui_business_card">名片</string>
    <string name="group_notification">[群成员变动]</string>
    <string name="type_custom">[自定义消息]</string>
    <string name="hundreds_of_unread_msgs">..\.</string>
    <string name="jmui_time_format_year_month_day">yyyy年-MM月-dd日</string>
    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm </string>
    <string name="jmui_time_format_hours">HH:mm</string>
    <string name="jmui_yesterday">昨天</string>
    <string name="jmui_before_dawn">凌晨</string>
    <string name="jmui_morning">早上</string>
    <string name="jmui_afternoon">下午</string>
    <string name="jmui_night">晚上</string>
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>
    <string name="year">年</string>
    <string name="jmui_month">月</string>
    <string name="jmui_day">日</string>
    <string name="second">秒</string>
    <string name="jmui_local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>
    <string name="select_friend_title">选择朋友</string>
    <string name="selected_num">(%s)</string>
    <string name="switch_to_friendless_mode">切换到无好友模式</string>
    <string name="switch_to_friend_mode">切换到好友模式</string>
    <string name="switch_to_friend_mode_hint">在设置中切换到好友模式\n以启用通讯录功能</string>
    <string name="friend_inviting">等待验证</string>
    <string name="friend_verify_title">验证消息</string>
    <string name="input_friend_username_hint">请输入您要查找的用户名</string>
    <string name="sent_request">已成功发送请求</string>
    <string name="accept">同意</string>
    <string name="refuse">拒绝</string>
    <string name="refused">已拒绝</string>
    <string name="processing">正在处理</string>
    <string name="send_refuse_reason_title">拒绝理由</string>
    <string name="reason_is_empty_hint">理由不能为空</string>
    <string name="decline_friend_invitation">对方已拒绝</string>
    <string name="delete_friend_dialog_title">确定删除好友？</string>
    <string name="friend_already_deleted_hint">已移除好友</string>
    <string name="file">文件</string>
    <string name="document">文档</string>
    <string name="album">相册</string>
    <string name="industry_standard">行业规范</string>
</resources>